Implemented connection to the Registration Service, and lots of small improvements

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,18 +7,21 @@
         {
             "name": "scan",
             "request": "launch",
-            "type": "dart"
+            "type": "dart",
+            "program": "lib/main.dart"
         },
         {
             "name": "scan (profile mode)",
             "request": "launch",
             "type": "dart",
+            "program": "lib/main.dart",
             "flutterMode": "profile"
         },
         {
             "name": "scan (release mode)",
             "request": "launch",
             "type": "dart",
+            "program": "lib/main.dart",
             "flutterMode": "release"
         }
     ]
