Changed generator for registration API to Dart-dio, added self-signed certificate handling

--- a/lib/apis/registration/open-generator-config.yaml
+++ b/lib/apis/registration/open-generator-config.yaml
@@ -1,4 +1,4 @@
 # Config options for the dart-dio generator
-pubName: emag_api
+pubName: openapi
 pubVersion: 0.0.1
-pubDescription: "EMAG API Client"
+pubDescription: "EMAG Badge Printer Client"
