--- a/lib/apis/backend/pubspec.yaml
+++ b/lib/apis/backend/pubspec.yaml
@@ -3,8 +3,8 @@
 #
 
 name: 'openapi'
-version: '1.0.0'
-description: 'OpenAPI API client'
+version: '0.0.1'
+description: 'EMAG API Client'
 homepage: 'homepage'
 environment:
   sdk: '>=2.12.0 <3.0.0'
