--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   udp: ^5.0.3
   mobile_scanner: ^3.2.0
+  dio: ^5.1.2
+  built_value: ^8.5.0
 
 
 dev_dependencies:
@@ -41,3 +43,6 @@ flutter:
   uses-material-design: true
   assets:
     - ./assets/graphics/
+    - ./assets/ca.crt
+    - ./assets/self.key
+    - ./assets/self.crt
