icons, splash screens

--- a/flutter_launcher_icons.yaml
+++ b/flutter_launcher_icons.yaml
@@ -1,18 +1,18 @@
 # To generate icons, run: flutter pub run flutter_launcher_icons
 flutter_launcher_icons:
-  image_path: "assets/icon/emag23.png"
+  image_path: "assets/images/logo.png"
   min_sdk_android: 21 # android min sdk min:16, default 21
   android: true # overwrite default icons
   ios: true
   web:
-    generate: true
+    generate: false
     #image_path: "assets/icon/emag23.png"
-    background_color: "#hexcode"
-    theme_color: "#hexcode"
+    #background_color: "#hexcode"
+    #theme_color: "#hexcode"
   windows:
-    generate: true
+    generate: false
     #image_path: "assets/icon/emag23.png"
-    icon_size: 48 # min:48, max:256, default: 48
+    #icon_size: 48 # min:48, max:256, default: 48
   macos:
-    generate: true
+    generate: false
     #image_path: "assets/icon/emag23.png"
