--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
   provider: ^6.0.5
-  flutter_launcher_icons: ^0.13.1
+  flutter_native_splash: ^2.2.19
   intl: ^0.17.0
   logger: ^1.3.0
   flutter_svg: ^2.0.5
@@ -62,6 +62,11 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.13.1
+  #flutter_driver:
+  #  sdk: flutter
+  #test: any
+  #screenshots: any
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -86,7 +91,7 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   assets:
-    - ./assets/graphics/
+    - ./assets/images/
     - ./assets/ca.crt
     - ./assets/self.key
     - ./assets/self.crt
