Trying to fix backend connectivity. Main change: TokenURL instead of Authorize URL

--- a/settings_import.json
+++ b/settings_import.json
@@ -1,8 +1,10 @@
 {
-  "apiurl": "https://backoffice.emag23.nl",
-  "oauthauthurl": "https://backoffice.emag23.nl/authorize",
-  "oauthtokenurl": "https://backoffice.emag23.nl/token",
-  "oauthredirecturi": "https://backoffice.emag23.nl/bundles/nelmioapidoc/oauth2-redirect.html",
-  "oauthclientid": "test",
-  "oauthclientsecret": "test",
+    "apiurl": "https://backoffice.emag23.nl",
+    "oauthauthurl": "https://backoffice.emag23.nl/authorize",
+    "oauthtokenurl": "https://backoffice.emag23.nl/token",
+    "oauthredirecturi": "https://backoffice.emag23.nl/bundles/nelmioapidoc/oauth2-redirect.html",
+    "oauthclientid": "test2",
+    "oauthclientsecret": "test2",
+    "userid": "mensa",
+    "password": "secret"
 }
