Add configuration for XCode builds

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   connectivity_plus: ^3.0.4
   shared_preferences: ^2.1.0
   flutter_secure_storage: ^8.0.0
-  realm: ^1.0.3
+  realm: 1.0.3
   oauth2: ^2.0.1
   dio: ^5.1.2
   built_value: ^8.5.0 
