--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -26,7 +26,7 @@ jobs:
         uses: maierj/fastlane-action@v2.3.0
         with:
           lane: android build_and_deploy
-          subdirectory: android
+          subdirectory: fastlane
         env:
           GOOGLE_PLAY_JSON_KEY_DATA: ${{ secrets.GOOGLE_PLAY_JSON_KEY_DATA }}
           MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
