--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   badge_api:
     path: apis/badge_api
   url_launcher: ^6.1.11
+  flutter_markdown: ^0.6.15
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -95,6 +96,7 @@ flutter:
   assets:
     - ./assets/images/
     - ./assets/ca-crt.der
+    - ./assets/help.md
     
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
