Upgrade for EMAG '24 Bucharest

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <uses-permission android:name="android.permission.VIBRATE"/>
     <uses-permission android:name="android.permission.CAMERA" />
     <application
-        android:label="EMAG '23 Scanner"
+        android:label="EMAG Scanner"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
