--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -93,7 +93,7 @@ BEGIN
             VALUE "FileDescription", "emag_scanner" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "emag_scanner" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2023 nl.emag23. All rights reserved." "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2023-2024 nl.emag23. All rights reserved." "\0"
             VALUE "OriginalFilename", "emag_scanner.exe" "\0"
             VALUE "ProductName", "emag_scanner" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
