--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: emag_scanner
-description: A scanner app to support the orga-team of EMAG '23'.
+description: A scanner app to support the orga-team of EMAG.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.1+19
+version: 1.0.2+20
 
 environment:
   sdk: '>=2.19.6 <3.0.0'
@@ -40,7 +40,7 @@ dependencies:
   connectivity_plus: ^3.0.4
   shared_preferences: ^2.1.0
   flutter_secure_storage: ^8.0.0
-  realm: 1.0.3
+  realm: ^1.0.3
   oauth2: ^2.0.1
   dio: ^5.1.2
   network_info_plus: ^3.0.5
